@@ -1,5 +1,8 @@
 CHANGELOG
 
+UNRELEASED 
+  * FEATURE : auto magic toggleRefinement on SearchParameters
+
 2.6.0 - 2015-10-15
   * FEATURE : new function to get a query string from any state
   * FEATURE : filter on a state to get only part of the search parameters
